# MindLeap

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  resources.qrc  todo.md
.github/workflows/: build_and_release.yml  cmake-multi-platform.yml  docker-publish.yml  main.yml
assets/rc/: app_icon.rc
build_tmp/: CMakeCache.txt
forms/: addcarddialog.ui  createuserdialog.ui  mainwindow.ui  renameuserdialog.ui  selectuser.ui  statsdialog.ui
forms/Dialogs/: aboutdialog.ui  guidedialog.ui  preferencesdialog.ui  statsdialog.ui  studydeckdialog.ui
include/Backend/Classes/: Card.h  Card.hpp  Deck.h  Deck.hpp  User.h  User.hpp
include/Backend/Classes/Algorithms/: Leitner.hpp  SM2.hpp
include/Backend/Classes/Base/: Algorithm.hpp  Entity.hpp  Stats.hpp
include/Backend/Classes/Stats/: CardStats.hpp  DeckStats.hpp  UserStats.hpp
include/Backend/Database/: queries.hpp  setup.hpp
include/Backend/Database/Deck/: addCard.hpp  create.hpp  removeCard.hpp
include/Backend/Database/User/: create.hpp  delete.hpp  fetchDecks.hpp  rename.hpp
include/Backend/Utilities/: DiscordManager.hpp  Logger.hpp  createUniqueDeck.hpp  createUniqueUser.hpp  generateID.hpp  statsUpdateContext.hpp
include/Frontend/: confirmationdialog.h  createuserdialog.h  customdialog.h  hoverabletablewidget.h  invalidinputbox.h  mainwindow.h  selectuser.h
include/Frontend/Dialogs/: addcarddialog.h  guidedialog.h  preferencesdialog.h  statsdialog.h  studydeckdialog.h
src/: main.cpp
src/Backend/Classes/: Card.cpp  Deck.cpp  User.cpp
src/Backend/Classes/Algorithms/: Leitner.cpp  SM2.cpp
src/Backend/Classes/Base/: Entity.cpp  Stats.cpp
src/Backend/Classes/Stats/: CardStats.cpp  DeckStats.cpp  UserStats.cpp
src/Backend/Database/: setup.cpp
src/Backend/Database/Deck/: create.cpp
src/Backend/Utilities/: DiscordManager.cpp  createUniqueDeck.cpp  createUniqueUser.cpp  generateID.cpp
src/Frontend/: addcarddialog.cpp  confirmationdialog.cpp  createdeckdialog.cpp  createuserdialog.cpp  customdialog.cpp  hoverabletablewidget.cpp  invalidinputbox.cpp  mainwindow.cpp  selectuser.cpp  statsdialog.cpp
src/Frontend/Dialogs/: aboutdialog.cpp  addcarddialog.cpp  confirmationdialog.cpp  customdialog.cpp  guidedialog.cpp  preferencesdialog.cpp  statsdialog.cpp  studydeckdialog.cpp
tests/Backend/Classes/: CardTest.cpp
